--- a/WhiteHatSec.VSIX/packages.config
+++ b/WhiteHatSec.VSIX/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.5.27130" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.ProjectAggregator" version="8.0.50728" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="14.0.23205" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727" targetFramework="net45" />
