--- a/WhiteHatSec.UnitTest/packages.config
+++ b/WhiteHatSec.UnitTest/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EnvDTE" version="8.0.2" targetFramework="net45" />
+  <package id="EnvDTE80" version="8.0.3" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.16" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NUnit" version="3.11.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net45" />
+  <package id="stdole" version="7.0.3302" targetFramework="net45" />
 </packages>
