--- a/WhiteHatSec.Shared/WhiteHatSec.Shared.csproj
+++ b/WhiteHatSec.Shared/WhiteHatSec.Shared.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constant.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocation.cs" />
   </ItemGroup>
